some fonts and formatting added in index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -35,23 +35,23 @@
                 <div class="devInfo">
                     <div class="hello"> Hi I am</div>
                     <div class="name">Gaurav Gautam Shakya</div>
-                    <div class="about">Developer, Linux Administrator, System Designer</div>
+                    <div class="about"><em> Developer, Linux Administrator, System Designer </em></div>
                     <div class="aboutmore">I am currently pursuing my Bachelor of Technology In Electrical Engineering
                         and I Love to engineer things and solve problems.
                     </div>
                     <div class="extra">
-                        <p> I am huge fan of linux open-source technologies because this gives me freedom to explore the
+                        <p> <em> I am huge fan of linux open-source technologies because this gives me freedom to explore the
                             world which usually remain hidden underneath by some proprietary licences. I also find
                             exciting
                             building, configuring, installing, using and sharing the programs among peers. All this led
                             me
                             to choose Devops Engineer as my profession. I hope my skills and knowledge could make some
-                            contribution to the society.
+                            contribution to the society. </em>
                         </p>
                         <div class="qoutes">
-                            <h3>Science does not know it's debt to imagination. </h3>
+                            <h3> <strong> <em>Science does not know it's debt to imagination.</em>  </strong>  </h3>
                             <h4>- Ralph Waldo Emerson</h4>
-                            <h3>Simplicity is the ultimate sophistication.</h3>
+                            <h3> <strong> <em> Simplicity is the ultimate sophistication. </em> </strong></h3>
 
                         </div>
                     </div>
