--- a/thankyou.html
+++ b/thankyou.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank you ...</title>
+    <style>
+        body{
+            text-align: center;
+            color: blueviolet;
+            background-image: url(./images/background.jpg);
+        }
+        h1{
+            margin-top: 20vh;
+            margin-right: 70vw;
+        }
+    </style>
 </head>
 <body>
-    <h2>Thank You ... </h2>
+    <h1>Thank You ... </h1>
 </body>
 </html>
