--- a/index.html
+++ b/index.html
@@ -3,99 +3,78 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaurav Website</title>
+    <title>Your Name - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-
 </head>
 
 <body>
-    <div class="container">
-        <div class="sidebar">
-            <nav>
-                <ul>
-                    <li><a href="index.html"> Home</a></li>
-                    <li><a href="intro.html" rel="noopener noreferrer"> My Intro</a></li>
-                    <li> <a href="services.html" rel="noopener noreferrer"> Services</a></li>
-                    <li><a href="blog.html" rel="noopener noreferrer">Blog</a></li>
-                    <li><a href="contact.html" rel="noopener noreferrer">Contact Me</a></li>
-                </ul>
-            </nav>
+    <div class="app_container">
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
 
-        </div>
-        <div class="main">
+        <header id="hero">
+            <h1>
+              <img src="grvPhoto.jpeg" alt="Gaurav Shakya Profile photo">  Gaurav Gautam Shakya 
+              <i style="font-size: small;"> Already an Engineer, aspiring to become entrepreneur!
+              </i>
+            </h1>
+            <p><h3>I am an Engineer, having aspiration to engineer some of the world's hardest problems.</h3>
+             My Ultimate aspiration is to Build and run at least one fortune 500 AI/AGI Company.</p>
+             <h2 style="background-color: white; color: black;">Purpose of Building and Running AI Company</h2>
+             <p>Objective of building Powerful AI or AGI is not to eliminate humans or replace humans. 
+                It is the ridiculous idea and Leadership in AI/AGI often get wrong ideas about
+                building the systems who can autonomously work beside humans. To work Autonomously It needs precise decision making,
+                imagination and thinking which we took <a href="https://en.wikipedia.org/wiki/Im
+                agination#:~:text=The%20most%20advanced%20mechanism%20of%20imagination%2C%20prefrontal%20synt
+                hesis%2C%20was%20likely%20acquired%20by%20humans%20around%2070%2C000%20years%20ago%20and%20re
+                sulted%20in%20behavioral%20modernity.%5B">70,000</a> Years to develop. We are so good at thinking
+                imagination and decision making that we nearly thought impossible in the past years and will continue.
 
-            <!-- <div class="hamberger">
-                    <img src="images/hem.png" class="ham" alt="hamberger image" width="23">
-                    <img src="images/cross.png" class="cross" alt="cross image" width="23">
-                </div> -->
+                In fact we like to think, imagine and make decisions but there main problem is that we are part of 
+                two distinct world.Mental and physical world. Where mental world works very fast and adapts the changes quickly.
+                On the other hand physical world that work way slower we think. The frustration lies in making the harmony between both World.
+The purpose of building the Powerful AI or AGI to make the physical world more agile and more adaptable and facilities us to create and test and destroy our product of vision and imagination</p>
+          </header>
+                    
 
-            <div class="infocontainer">
-                <div class="devInfo">
-                    <div class="hello"> Hi I am</div>
-                    <div class="name">Gaurav Gautam Shakya</div>
-                    <div class="about"><em> Developer, Linux Administrator, System Designer </em></div>
-                    <div class="aboutmore">I am currently pursuing my Bachelor of Technology In Electrical Engineering
-                        and I Love to engineer things and solve problems.
-                    </div>
-                    <div class="extra">
-                        <p> <em> I am huge fan of linux open-source technologies because this gives me freedom to explore the
-                            world which usually remain hidden underneath by some proprietary licences. I also find
-                            exciting
-                            building, configuring, installing, using and sharing the programs among peers. All this led
-                            me
-                            to choose Devops Engineer as my profession. I hope my skills and knowledge could make some
-                            contribution to the society. </em>
-                        </p>
-                        <div class="qoutes">
-                            <h3> <strong> <em>Science does not know it's debt to imagination.</em>  </strong>  </h3>
-                            <h4>- Ralph Waldo Emerson</h4>
-                            <h3> <strong> <em> Simplicity is the ultimate sophistication. </em> </strong></h3>
+        <section id="about">
+            <h1 style="background-color: white; color: black;">Who am I</h1>
+            <p>That's what usually I ask myself. But for now, I am <h3 id="age">23</h3> old and I am an Engineer( but Electrical Engineer by Academics). Working as 
+                IT Infrastructure observability Engineer at HCLTECH.
+                  Till Now 
+                I have not achieved much. But I believe that trying to menifest the my product of my imagination 
+                may lead to find the purpose of my life. I am striving to find a way or gap to build a company. </p>
+        </section>
 
-                        </div>
-                    </div>
-                    <div class="buttons">
-                        <a href="grvCV.pdf" target="_blank"> <button>Download CV</button> </a>
-                        <a href="contact.html"> <button>Contact Me</button> </a>
-                    </div>
-
-                </div>
-                <div class="devpic">
-                    <img src="images/devPic.png" alt="Gaurav Gautam Shakya">
-                </div>
+        <section id="work">
+            <h1 style="background-color: white; color: black;">Work</h1>
+            <div class="work-item">
+                <img src="Q.png" alt="Project 1">
+                <h3><a style="text-decoration: none;" href="https://script.google.com/macros/s/AKfycbwLUg0iBOzX5VnD1W8hKDQbCIYmgv3ynyZCII4b0U99qu38pAlI5njl5poqC49MqaIl/exec"> QuizAI </a></h3>
+                <p>Crafting Quiz with Gemini AI on any Subject, any No. of Questions or without subject matter expertise.</p>
+                <p><h3>Problem Statement</h3>I have realized that There are lots of people who often have requirements to create the Quiz with limited time and resources. The problem statement is that we need to create application which facilitates quiz creation without human intervention and expert or specialized knowledge. Let's understand problem in more detail by an example. Let say you have requirements to create the Quiz of 20 question, 4 choices for each question. So how much work you need to do. First of all . You have to figure out 20 unique questions. And. Then you have think about 80 choices in which 20 are correct and 60 incorrect. It is quite easy for someone to figure out the correct choice. But Here comes the trickiest part, figuring out incorrect choices are much trickier than correct choices. Why? because this is the only thing which captures the confidence and knowledge of the candidate who makes decisions or series of decision to figure out the correct choice among all the choices.</p>
+                <a style="text-decoration: none;" href="https://devpost.com/software/avatar-eklvis?ref_content=user-portfolio&ref_feature=in_progress">More About QuizAI</a>
+                <p><h3>QuizAI: Solution</h3>
+                    <img style="height: 100%; width: 100%;" src="QuizAI_solution.png">
+                </p>
             </div>
-        </div>
+        </section>
 
-
+        <section id="contact">
+            <h1 style="background-color: white; color: black;">Contact</h1>
+            <h2 style="background-color: white; color: black; ">Email: Please Leave Email on <i style="color: blue;">grv.shakya0563@gmail.com</i></h2>
+            <h2><a style="text-decoration: none;" href="https://www.linkedin.com/in/gaurav0563/"> Linkedin</a></h2>
+            <h2><a style="text-decoration: none;" href="https://github.com/grv0563"> GitHub</a></h2>
+            <p>Thank you for Comming! I wish you the best to imagine and live better life !</p>
+        </section>
     </div>
-    <div class="footerContainer">
-        <div class="col-1">
-            <h3>UseFul links</h3>
-            <a href="https://www.linkedin.com/in/gaurav-gautam-shakya-04a8b3191/" target="_blank">Linkedin</a>
-            <a href="https://github.com/0563gaurav" target="_blank">GitHub</a>
-            <a href="https://www.hackerrank.com/hartik363" target="_blank">Hackerrank</a>
-            <a href="https://play.picoctf.org/practice?category=6&page=1" target="_blank">picoCTF</a>
-        </div>
-        <div class="col-2">
-            <h3>Interest</h3>
-
-            <img src="images/copyright-symbol.png" alt="copyright-symbol">
-            <h6>Copyright 2023 grv.notes.com</h6>
-            <div class="developerPhoto">
-                <img src="images/gaurav.jpeg" alt="Developer Photo">
-            </div>
-
-
-        </div>
-        <div class="col-3">
-            <h3>Contact</h3>
-            <p>Nagla Kunwar Kharbandi Nagla wazir <br> Farrukhabad, 209625 <br> Uttar Pradesh, India </p>
-            <p>Email <br> Gauravshakya4030@gmail.com</p>
-            <p>Phone <br> 8303439776</p>
-        </div>
-    </div>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
