Content and fornt changed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+        </style>
+    <title>Gaurav Shakya</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -21,7 +24,7 @@
         <header id="hero">
             <h1>
               <img src="grvPhoto.jpeg" alt="Gaurav Shakya Profile photo">  Gaurav Gautam Shakya 
-              <i style="font-size: small;"> Already an Engineer, aspiring to become entrepreneur!
+              <i style="font-size: small;"> Already an Engineer, Aspiring to become entrepreneur!
               </i>
             </h1>
             <p><h3>I am an Engineer, having aspiration to engineer some of the world's hardest problems.</h3>
@@ -30,10 +33,7 @@
              <p>Objective of building Powerful AI or AGI is not to eliminate humans or replace humans. 
                 It is the ridiculous idea and Leadership in AI/AGI often get wrong ideas about
                 building the systems who can autonomously work beside humans. To work Autonomously It needs precise decision making,
-                imagination and thinking which we took <a href="https://en.wikipedia.org/wiki/Im
-                agination#:~:text=The%20most%20advanced%20mechanism%20of%20imagination%2C%20prefrontal%20synt
-                hesis%2C%20was%20likely%20acquired%20by%20humans%20around%2070%2C000%20years%20ago%20and%20re
-                sulted%20in%20behavioral%20modernity.%5B">70,000</a> Years to develop. We are so good at thinking
+                imagination and thinking which we took <a style="text-decoration: none;" href="https://en.wikipedia.org/wiki/Imagination#:~:text=The%20most%20advanced%20mechanism%20of%20imagination%2C%20prefrontal%20synthesis%2C%20was%20likely%20acquired%20by%20humans%20around%2070%2C000%20years%20ago%20and%20resulted%20in%20behavioral%20modernity.%5B40">70,000</a> Years to develop. We are so good at thinking
                 imagination and decision making that we nearly thought impossible in the past years and will continue.
 
                 In fact we like to think, imagine and make decisions but there main problem is that we are part of 
@@ -45,11 +45,10 @@ The purpose of building the Powerful AI or AGI to make the physical world more a
 
         <section id="about">
             <h1 style="background-color: white; color: black;">Who am I</h1>
-            <p>That's what usually I ask myself. But for now, I am <h3 id="age">23</h3> old and I am an Engineer( but Electrical Engineer by Academics). Working as 
-                IT Infrastructure observability Engineer at HCLTECH.
-                  Till Now 
-                I have not achieved much. But I believe that trying to menifest the my product of my imagination 
-                may lead to find the purpose of my life. I am striving to find a way or gap to build a company. </p>
+            <p>That's what usually I ask myself. But for now, I am Gaurav Shakya, <h3 style="color: white;" id="age">23</h3> old from Farrukhabad, Uttar Predesh
+                 and I am an Engineer( but Electrical Engineer by Academics). Working as IT Infrastructure observability Engineer at HCLTECH.Till Now 
+                I have not achieved much. But I believe that trying to menifest my own product of my imagination 
+                could lead to find the purpose of my life. So I am striving to find a way or gap to get started! </p>
         </section>
 
         <section id="work">
@@ -59,7 +58,7 @@ The purpose of building the Powerful AI or AGI to make the physical world more a
                 <h3><a style="text-decoration: none;" href="https://script.google.com/macros/s/AKfycbwLUg0iBOzX5VnD1W8hKDQbCIYmgv3ynyZCII4b0U99qu38pAlI5njl5poqC49MqaIl/exec"> QuizAI </a></h3>
                 <p>Crafting Quiz with Gemini AI on any Subject, any No. of Questions or without subject matter expertise.</p>
                 <p><h3>Problem Statement</h3>I have realized that There are lots of people who often have requirements to create the Quiz with limited time and resources. The problem statement is that we need to create application which facilitates quiz creation without human intervention and expert or specialized knowledge. Let's understand problem in more detail by an example. Let say you have requirements to create the Quiz of 20 question, 4 choices for each question. So how much work you need to do. First of all . You have to figure out 20 unique questions. And. Then you have think about 80 choices in which 20 are correct and 60 incorrect. It is quite easy for someone to figure out the correct choice. But Here comes the trickiest part, figuring out incorrect choices are much trickier than correct choices. Why? because this is the only thing which captures the confidence and knowledge of the candidate who makes decisions or series of decision to figure out the correct choice among all the choices.</p>
-                <a style="text-decoration: none;" href="https://devpost.com/software/avatar-eklvis?ref_content=user-portfolio&ref_feature=in_progress">More About QuizAI</a>
+                <a style="text-decoration: none; " href="https://devpost.com/software/avatar-eklvis?ref_content=user-portfolio&ref_feature=in_progress">More About QuizAI</a>
                 <p><h3>QuizAI: Solution</h3>
                     <img style="height: 100%; width: 100%;" src="QuizAI_solution.png">
                 </p>
@@ -68,9 +67,10 @@ The purpose of building the Powerful AI or AGI to make the physical world more a
 
         <section id="contact">
             <h1 style="background-color: white; color: black;">Contact</h1>
-            <h2 style="background-color: white; color: black; ">Email: Please Leave Email on <i style="color: blue;">grv.shakya0563@gmail.com</i></h2>
+            
             <h2><a style="text-decoration: none;" href="https://www.linkedin.com/in/gaurav0563/"> Linkedin</a></h2>
             <h2><a style="text-decoration: none;" href="https://github.com/grv0563"> GitHub</a></h2>
+            <h2 style="color: white;" >To connect, Please Leave Email on <i style="color: blue;">grv.shakya0563@gmail.com</i></h2>
             <p>Thank you for Comming! I wish you the best to imagine and live better life !</p>
         </section>
     </div>
