--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@ The purpose of building the Powerful AI or AGI to make the physical world more a
             <h2 style="color: white;" >To connect, Please Leave Email on <i style="color: blue;">grv.shakya0563@gmail.com</i></h2>
             <p>Thank you for Comming! I wish you the best to imagine and live better life !</p>
         </section>
+        <footer>
+            <p style="color: white;">&copy; 2024  Gaurav Shakya. All Rights Reserved.</p>
+          </footer>
     </div>
     <script src="script.js"></script>
 </body>
