font size changed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <header id="hero">
             <h1>
               <img src="grvPhoto.jpeg" alt="Gaurav Shakya Profile photo">  Gaurav Gautam Shakya 
-              <i style="font-size: small;"> Already an Engineer, Aspiring to become entrepreneur!
+              <i style="font-size: large;"> Already an Engineer, Aspiring to become entrepreneur!
               </i>
             </h1>
             <p><h3>I am an Engineer, having aspiration to engineer some of the world's hardest problems.</h3>
