--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <p>
                 We know very less or none about Death, this is one of the biggest reason not to understand Life.  You can not understand right without outlining wrong, true without false and good without bad. Mysteries of death sparks piculier curiosity and fascination in me.
 <hr>It is with profound sadness that I myself taking pleasure to announce the Death of my beloved Me, Gaurav Gautam Shakya, World renowned Billionaire Businessman, Technologist who left the profound immutable legacy behind in the history of Technology and Business innovation. His Contribution to Technology and Engineering is unforgettable specific to Technology and innovation in Healthcare system of India.
-Lastly, I want to prostrate to my parents for making me existing. I wanna say Goodbye to everyone whom I shared love of life.
+Lastly, I want to prostrate to my parents for making me existing. I wanna say Goodbye to everyone with whom I shared love of life.
 <hr>            
 </p>
             
