--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
              <h2>My Ultimate Ambition is to Build and run at least one fortune 500 Technology Company.</h2></p>
              <h2 style="background-color: white; color: black;"> Desires and Ambitions </h2>
              <p>
-                Choosing kind of Death is my birthright. So I am here to claim it with pleasure. I am to choosing to engineer the world's hardest problems which left the profound legacy behind me in the field of technology and business innovation.
+                Choosing kind of Death is my birthright. So I am here to claim it with my own pleasure. I am to choosing to engineer the world's hardest problems which will leave the profound legacy behind me in the field of technology and business innovation.
                 <hr>
                 Inventing wealth is not an option, it is hard requirement for claiming my birthright. My strong curiosity toward knowledge is the biggest advantage and sign to meet with something too precious to comprehend linguistically.
                 <hr>
-                Eliminating Engineered product and Technological advancement form the our life,  throws back to Stone age where the human civilization started. This gives me the sense of thrill and importance of engineering knowledge and technology in our life.
+                Eliminating Engineered product and Technological advancement form the our life,  throws us back to Stone age where the human civilization started. This gives me the sense of thrill and importance of engineering knowledge and technology in our life.
                 <hr>
                 Money is illusion. Money is not earned, it is exchanged with needs, Fears and aspirations. Money is system not physical but mental. 
                 <hr>
@@ -76,7 +76,12 @@
                 <h3>Problem Statement</h3>
                 <h4>We are Building Healthcare App to Address 2 Major problem of India's Healthcare System</4>
                 <h4>1. Presonalized Heathcare or Precision Medicine by Building system of storing and sharing the Health information anytime and anywhere</h4>
-                <h4>2. Reducing Cost Of Healthcare Delivery using Balockchain and AI</h4>
+                <h4>2. Reducing Cost Of Healthcare Delivery in India using Balockchain and AI</h4>
+                <h2>Future Directions</h2>
+                <h4>1. Building Nation Wide Network of Healthcare Providers(Hospitals,Clinics,Old Age Home,NGOs, Testing centers/Medical Labs, Nursing Homes)</h4>
+                <h4>2. Building Nation Wide Network Network of Healthcare Professionals(Doctors, Nurses,Allied Heathcare Professionals)</h4>
+                <h4>3. Building Nation Wide Network National Emergemcey Help Service Like Ambulence with PPP with State/Central Government</h4>
+                <h4>4. Building strong Marketplace for providing TeleHealth Services across the World:<h1>Leveraging medical tourism and health tourism</h1> </h4>
                 <p>
 
                 </p>
