--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                 <h2>Future Directions</h2>
                 <h4>1. Building Nation Wide Network of Healthcare Providers(Hospitals,Clinics,Old Age Home,NGOs, Testing centers/Medical Labs, Nursing Homes)</h4>
                 <h4>2. Building Nation Wide Network Network of Healthcare Professionals(Doctors, Nurses,Allied Heathcare Professionals)</h4>
-                <h4>3. Building Nation Wide Network National Emergemcey Help Service Like Ambulence with PPP with State/Central Government</h4>
-                <h4>4. Building strong Marketplace for providing TeleHealth Services across the World:<h1>Leveraging medical tourism and health tourism</h1> </h4>
+                <h4>3. Building Nation Wide Network of Medical Emergemcey Help Service Like Ambulence with PPP model with State/Central Government</h4>
+                <h4>4. Building strong Marketplace for providing TeleHealth Services across the World:<h1>Leveraging medical/health tourism for Creating Employment and Strenthing the Heathcare Delivery with Consideration of Patient Experience</h1> </h4>
                 <p>
 
                 </p>
